crates/pbps-cli/tests/snapshots/diagnostic_snapshots__unicode.snap
---
source: crates/pbps-cli/tests/diagnostic_snapshots.rs
expression: human.snapshot()
---
exit: 2
--- stdout ---
No identity file yet at `./schema.ids.json`; run `pbps plan` to create it.
--- stderr ---
pbps::load::semantic

  × invalid type: unclosed parenthesis in type `decimal(18, 2`
   ╭─[./schema/dbo.café.yml:7:11]
 6 │   solde:
 7 │     type: "decimal(18, 2"
   ·           ───────┬───────
   ·                  ╰── unclosed parenthesis in type `decimal(18, 2`
 8 │     nullable: false
   ╰────

--- end ---
